# applekit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: macos-build.yml
Formula/: applekit.rb
scripts/: build-swift-helper.sh
src/: cli.rs  error.rs  main.rs  notes.rs  reminders.rs
swift/: ReminderHelper.swift
